force-app-unpackaged-objects/main/default/objects/Account/fields/cUnite_Accessibility_Info__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Accessibility_Info__c</fullName>
    <label>Accessibility Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>