force-app-unpackaged-objects/main/default/objects/Account/fields/cUnite_Entrance_Instructions__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Entrance_Instructions__c</fullName>
    <label>Entrance Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>