force-app-unpackaged-objects/main/default/objects/Account/fields/cUnite_Location_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Location_Photo_URL__c</fullName>
    <label>Location Photo or Map URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>