force-app-unpackaged-objects/main/default/objects/Account/fields/cUnite_Transit_Instructions__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Transit_Instructions__c</fullName>
    <label>Transit Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>